# vllm_cibench

./: .coverage  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  BRANCH_PROTECTION.md  MAKEFILE_APPEND.txt  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: 1-accuracy-pipeline.md  2-configs-and-tools.md  3-scripts-and-markers.md  4-mypy-and-style.md  5-functional-coverage-and-params.md
.github/workflows/: auto-merge.yml  ci.yml  codex-review.yml  daily.yml  protect-main.yml
configs/: matrix.yaml  providers.yaml
configs/deploy/: infer_vllm_kubeinfer.yaml
configs/grafana/: ci_bench_dashboard.json
configs/scenarios/: k8s_hybrid_qwen3-32b_tp2_w4a8.yaml  k8s_pd_deepseek-r1_2p1d_reasoning_w8a8.yaml  local_single_qwen3-32b_guided_w8a8.yaml
configs/tests/: accuracy.yaml  functional.yaml  functional_deepseek-r1.yaml  functional_example.yaml  functional_qwen3-32b.yaml  perf.yaml
docs/: DESIGN.md  DESIGN_TODO.md  DEVELOPMENT.md  REQUIREMENTS.md  TODO.md
hooks/: pre-push
scripts/: collect_and_push.sh  deploy_k8s.sh  start_local.sh
src/: requests.py  typer.py  yaml.py
src/prometheus_client/: __init__.py
src/vllm_cibench/: __init__.py  cli.py  config.py  config_loader.py  run.py
tests/: conftest.py  test_cli_run_matrix.py  test_config_and_cli.py  test_config_loader.py  test_version.py
tests/clients/: test_http.py
tests/deploy/: test_k8s_cleanup.py  (+2 more)
tools/: acs_bench_mock.py  gen_scenario_yaml.py  metrics_rename.py
(+74 files in other folders)
